oops tweak style alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ p {
 #aboutContainer {
   width: 100%;
   max-width: 960px;
-  margin: 30px 0 300px 30px;
+  margin: 30px 0 300px 50px;
   padding: 30px;
   background-color: white;
   clear: both;
@@ -75,7 +75,7 @@ p {
  #portContainer {
     width: 100%;
     max-width: 960px;
-    margin: 30px 0 30px 30px;
+    margin: 30px 0 30px 50px;
     padding: 30px;
     background-color: white;
     clear: both;
